# Freelance-Exchange

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  tmp.cpp  проблемы.md
code/data/: admin.json  customer.json  idjs.json  order.json  performer.json
code/include/: .clang-tidy  JsonClass.hpp  admin.h  admin.hpp  customer.h  customer.hpp  database.hpp  order.h  order.hpp  password.hpp  performer.h  performer.hpp  rating.h  rating.hpp  review.h  review.hpp  storage.h  storage.hpp  user.h  user.hpp
code/include/cli/: SignIn.hpp  SignUp.hpp  admincli.hpp  customercli.hpp  performercli.hpp
code/src/: JsonClass.cpp  admin.cpp  customer.cpp  database.cpp  main.cpp  order.cpp  password.cpp  performer.cpp  rating.cpp  review.cpp  storage.cpp  user.cpp
code/src/cli/: SignIn.cpp  SignUp.cpp  admincli.cpp  customercli.cpp  performercli.cpp
